tests/paczka1/small_fuzzy/51667573.err
Error in line 3: k9kAo3VHbq S820 20,6
Error in line 6: k9kAo3VHbq A453 9,2
Error in line 7: k9kAo3VHbq A442 20,9
Error in line 12: YibmPGiG80 A920 27,51
